--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "fullstack-typescript-node",
+  "name": "OGilliam-Fandom-Challenge",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\""
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}'"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Orion Gilliam",
+  "license": "",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.20"
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
-    "@types/mongoose": "^5.7.29",
     "@types/node": "^14.0.14",
     "concurrently": "^5.2.0",
+    "eslint": "^7.12.1",
     "nodemon": "^2.0.4"
+  },
+  "prettier": {
+    "printWidth": 140
   }
 }
