--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
+    "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js --verbose\"",
     "lint:fix": "eslint './src/**/*.{ts,tsx}'"
   },
   "keywords": [],
